[tool.poetry]
name = "sessionzero"
version = "0.1.0"
description = "A minimalistic VTT"
authors = ["Dmitry O <feanarokurufinve@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
uvicorn = "^0.24.0.post1"
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"
flake8 = "^6.1.0"
black = "^23.12.0"
isort = "^5.13.1"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
